--- a/_posts/2017-10-10-R-110-Date-Values.md
+++ b/_posts/2017-10-10-R-110-Date-Values.md
@@ -135,6 +135,14 @@ mnumber = function(INPUT_DATE){
 }
 ```
 
+YYYYMMDD 를 YYYY-MM 으로
+```r
+YYYYMM <- format(as.Date(as.character(YYYYMMDD),format="%Y%m%d"),"%Y-%m")
+```
+
+
+
+
 ## Learning More
 
 문자 데이터를 날짜로 변환하는 것에 대한 자세한 내용은 help(as.Date) 및 help(strftime)를 참조하십시오. 날짜/시간 형식 지정에 대한 자세한 내용은 help(ISOdatetime)를 참조하십시오.
