--- a/_posts/2017-10-20-R-210-Subsetting.md
+++ b/_posts/2017-10-20-R-210-Subsetting.md
@@ -67,6 +67,9 @@ newdata <- mydata[ mydata$gender=='F' & mydata$age > 65 , ]
 
 ```
 
+만약 selecting 결과에 알수없는 NA 열들이 추가된다면, `which()` 를 써서 해결되는지 살펴봅니다.([링크](https://stackoverflow.com/questions/14261619/subsetting-r-data-frame-results-in-mysterious-na-rows))
+
+
 ## subset 함수를 사용한 관측치 선택하기 (Selection using the Subset Function)
 
 `subset( )` 함수는 변수와 관측치를 선택하는 가장 쉬운 방법입니다. 다음 예에서는 20보다 크거나 같은 age 또는 10보다 적은 age의 값을 가진 모든 행을 선택합니다. ID 및 Weight 변수를 유지합니다.
