--- a/_posts/2017-10-10-R-110-Date-Values.md
+++ b/_posts/2017-10-10-R-110-Date-Values.md
@@ -106,6 +106,28 @@ age = function(from, to) {
 }
 
 age(mydate1, mydate2)
+
+
+# 만월령 구하는 함수
+age_month = function(from_YYYYMMDD, to_YYYYMMDD) {
+
+  from_date = as.Date(as.character(from_YYYYMMDD), format = '%Y%m%d')
+  to_date = as.Date(as.character(to_YYYYMMDD), format = '%Y%m%d')
+
+  from_lt = as.POSIXlt(from_date)
+  to_lt = as.POSIXlt(to_date)
+
+  year_gap  <- to_lt$year - from_lt$year
+  month_gap <- to_lt$mon  - from_lt$mon
+  day_gap   <- to_lt$mday - from_lt$mday
+
+  adj <- day_gap
+  adj[day_gap <  0] <- -1
+  adj[day_gap >= 0] <-  0
+
+  age_month <- year_gap*12 + month_gap + adj
+}
+
 ```
 
 month number 를 구하는 함수
