--- a/_Rmd/2018-11-18-R-Test.Rmd
+++ b/_Rmd/2018-11-18-R-Test.Rmd
@@ -1,8 +1,8 @@
 ---
 layout: post  
 comments: true  
-title: R 기초 110 날짜 다루기 (Date Values)  
-date: 2017-10-10  
+title: R Markdown Test Page  
+date: 2018-11-18  
 category: [R for Beginners]  
 tag: [R]  
 author: hkim  
