--- a/_posts/2018-11-18-RMD-TEST-02.md
+++ b/_posts/2018-11-18-RMD-TEST-02.md
@@ -16,5 +16,7 @@ R 마크다운을 이용해서 블로깅이 가능한 것 같다.
 
 ## 헤더1.1
 
-R 마크다운을 이용한 블로깅 테스트.
+> R 마크다운을 이용한 블로깅 테스트.
 
+
+![test](/posts/FILES_2018-11-18-RMD-TEST-02/1541892243_423986816.jpg){width=400px}
