--- a/_posts/2018-11-18-RMD-TEST-01.md
+++ b/_posts/2018-11-18-RMD-TEST-01.md
@@ -1,7 +1,7 @@
 ---
 layout: post  
 comments: true  
-title: R Markdown Test Page  
+title: "R Markdown Test Page (MD)"  
 date: 2018-11-18  
 category: [R for Beginners]  
 tag: [R]  
@@ -37,3 +37,7 @@ You can also embed plots, for example:
 ![plot of chunk unnamed-chunk-2](/_posts/FILES_2018-11-18-RMD-TEST-01/unnamed-chunk-2-1.png)
 
 Note that the echo = FALSE parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+![plot of chunk unnamed-chunk-2](/assets/article_images/FILES_2018-11-18-RMD-TEST-01/unnamed-chunk-2-1.png)
+
