--- a/_posts/2018-11-18-RMD-TEST-02.md
+++ b/_posts/2018-11-18-RMD-TEST-02.md
@@ -1,7 +1,7 @@
 ---
 layout: post  
 comments: true  
-title: "R Markdown 을 이용한 블로깅"  
+title: "R Markdown 을 이용한 블로깅 (MD 파일)"  
 date: 2018-11-18  
 category: [R for Beginners]  
 tag: [R]  
@@ -20,3 +20,6 @@ R 마크다운을 이용해서 블로깅이 가능한 것 같다.
 
 
 ![test](/_posts/FILES_2018-11-18-RMD-TEST-02/1541892243_423986816.jpg){width=400px}
+
+
+![test](/assets/article_images/FILES_2018-11-18-RMD-TEST-02/1541892243_423986816.jpg){width=400px}
