--- a/_posts/Rmd/2018-11-18-RMD-TEST-01.md
+++ b/_posts/Rmd/2018-11-18-RMD-TEST-01.md
@@ -1,7 +1,7 @@
 ---
 layout: post  
 comments: true  
-title: R Markdown Test Page  
+title: "R Markdown Test Page (RMD)"  
 date: 2018-11-18  
 category: [R for Beginners]  
 tag: [R]  
@@ -15,14 +15,25 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the Knit button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r}
+
+{% highlight r %}
 summary(cars)
-```
+{% endhighlight %}
+
+
+
+{% highlight text %}
+##      speed           dist       
+##  Min.   : 4.0   Min.   :  2.00  
+##  1st Qu.:12.0   1st Qu.: 26.00  
+##  Median :15.0   Median : 36.00  
+##  Mean   :15.4   Mean   : 42.98  
+##  3rd Qu.:19.0   3rd Qu.: 56.00  
+##  Max.   :25.0   Max.   :120.00
+{% endhighlight %}
 
 You can also embed plots, for example:
 
-```{r, echo=FALSE}
-plot(cars)
-```
+![plot of chunk unnamed-chunk-2](/assets/article_images/FILES_2018-11-18-RMD-TEST-01/unnamed-chunk-2-1.png)
 
 Note that the echo = FALSE parameter was added to the code chunk to prevent printing of the R code that generated the plot.
