--- a/_posts/Rmd/2018-11-18-RMD-TEST-02.md
+++ b/_posts/Rmd/2018-11-18-RMD-TEST-02.md
@@ -29,32 +29,8 @@ R로 그린 그림
 
 외부에서 불러오는 그림 2
 
-![test](../../_posts/FILES_2018-11-18-RMD-TEST-02/1541892243_423986816.jpg){width=400px}
+![test](/assets/article_images/FILES_2018-11-18-RMD-TEST-02/1541892243_423986816.jpg){width=400px}
 
 
-
-{% highlight r %}
-opts_knit$set(root.dir = "C:/Clouds/GitHub/Dr-HKim.github.io")
-getwd()
-{% endhighlight %}
-
-
-
-{% highlight text %}
-## [1] "C:/Clouds/GitHub/Dr-HKim.github.io"
-{% endhighlight %}
-
-
-
-{% highlight r %}
-setwd("C:/Clouds/GitHub/Dr-HKim.github.io")
-getwd()
-{% endhighlight %}
-
-
-
-{% highlight text %}
-## [1] "C:/Clouds/GitHub/Dr-HKim.github.io"
-{% endhighlight %}
 
 
