--- a/_Rmd/2018-11-18-Blog-with-RMD.Rmd
+++ b/_Rmd/2018-11-18-Blog-with-RMD.Rmd
@@ -10,15 +10,15 @@ headerImage: true
 
 ---
 
-***preface*** 이번 포스트에서는 R마크다운(R Markdown)을 이용하여 블로깅하는 방법을 알아보겠습니다. (last update: 2018.11.21)
+***preface*** (last update: 2018.11.21) 이번 포스트에서는 R마크다운(R Markdown)을 이용하여 블로깅하는 방법을 알아보겠습니다. 
 
 
 마크다운(Markdown)은 마크업 언어의 일종으로, 텍스트 안에서 헤더(header)나 코드블럭(codeblock)을 지정할 수 있는 등 작성자 입장에서 편리할 뿐만 아니라 읽기도 쉽다는 장점을 가지고 있습니다.
 
-R마크다운(R Markdown)은 마크다운 언어에 R 기능을 추가한 것으로, 코드블럭에 R 코드를 넣는 것 뿐만 아니라 실행(!)한 결과를 함께 보여줄 수 있습니다. R마크다운에 대한 더 자세한 설명은 http://rmarkdown.rstudio.com 을 참고하세요.
+R마크다운(R Markdown)은 마크다운 언어에 R 기능을 추가한 것으로, 코드블럭에 R 코드를 넣는 것 뿐만 아니라 실행(!)한 결과를 함께 보여줄 수 있습니다. R마크다운에 대한 더 자세한 설명은 [http://rmarkdown.rstudio.com](http://rmarkdown.rstudio.com) 을 참고하세요.
 
 
-R마크다운에서는 R 코드를 입력하면 코드 실행 결과도 함께 표시할 수 있습니다.
+R마크다운에서는 R 코드를 입력하면 아래와 같이 코드 실행 결과도 함께 표시할 수 있습니다.
 
 ```{r}
 summary(cars)
