--- a/_Rmd/2018-11-20-R-102-Getting-Started-with-RStudio.Rmd
+++ b/_Rmd/2018-11-20-R-102-Getting-Started-with-RStudio.Rmd
@@ -45,7 +45,7 @@ Type 'q()' to quit R.
 
 ## Console 창 사용하기
 
-먼저 간단하게 1 + 1 을 계산해 봅시다. Console 창에서 `>` 옆에 클릭하면 입력할 수 있는 것을 확인할 수 있습니다. 그럼 아래와 같이 입력하고 엔터키를 누릅니다.
+먼저 간단하게 1 + 1 을 계산해 봅시다. Console 창에서 나타난 메세지 맨 아래에 있는 `>` 옆을 클릭하면 키보드로 입력할 수 있도록 커서가 깜빡이는 것을 확인할 수 있습니다. 그럼 아래와 같이 입력하고 엔터키를 누릅니다.
 
 ```{r}
 1+1
