--- a/_Rmd/2018-11-20-Getting-Started-with-RStudio.Rmd
+++ b/_Rmd/2018-11-20-Getting-Started-with-RStudio.Rmd
@@ -1,6 +1,6 @@
 ---
 layout: post  
-title: R 기초 102 RStudio 와 친해지는 방법  
+title: RStudio 처음 사용하는 방법  
 date: 2018-11-20  
 category: [R for Beginners]  
 tag: [R]  
@@ -10,7 +10,7 @@ headerImage: true
 
 ---
 
-***preface*** (last update: 2018.11.21) RStudio 를 실행하고 사용하는 방법에 대하여 설명합니다.
+***preface*** (last update: 2018.11.22) 이번 포스트에서는 RStudio 를 실행하고 사용하는 방법에 대하여 설명합니다.
 
 
 ## RStudio 실행하기
@@ -47,52 +47,30 @@ Type 'q()' to quit R.
 
 먼저 간단하게 1 + 1 을 계산해 봅시다. Console 창에서 나타난 메세지 맨 아래에 있는 `>` 옆을 클릭하면 키보드로 입력할 수 있도록 커서가 깜빡이는 것을 확인할 수 있습니다. 그럼 아래와 같이 입력하고 엔터키를 누릅니다.
 
-
-{% highlight r %}
+```{r}
 1+1
-{% endhighlight %}
-
-
-
-{% highlight text %}
-## [1] 2
-{% endhighlight %}
+```
 
 그럼 위와 같이 2 가 출력되는 것을 확인할 수 있습니다. `[1]` 은 첫번째 줄의 값이라는 뜻이니 우선은 크게 신경쓰지 맙시다.
 
 변수를 저장하고 변수끼리 계산할 수도 있습니다. 먼저 `x` 라는 변수에 값 1 을 저장해봅시다. 값을 저장할때에는 `<-` 라는 기호를 씁니다.
 
-
-{% highlight r %}
+```{r}
 x <- 1
-{% endhighlight %}
+```
 
 Console 창에는 아무런 표시가 되지 않지만, 우측 상단의 Environment 탭에서 x 라는 변수에 1 이 저장되었음을 확인할 수 있습니다. 그럼 Console 창에서 `x` 를 입력해 봅시다. 그럼 아래와 같이 1 값을 출력하는 것을 확인할 수 있습니다.
 
-
-{% highlight r %}
+```{r}
 x
-{% endhighlight %}
-
-
-
-{% highlight text %}
-## [1] 1
-{% endhighlight %}
+```
 
 그럼 `y` 에 100 을 저장하고 `x+y` 를 계산해봅시다.
 
-
-{% highlight r %}
+```{r}
 y <- 100
 x+y
-{% endhighlight %}
-
-
-
-{% highlight text %}
-## [1] 101
-{% endhighlight %}
+```
 
 
 
