--- a/_Rmd/2018-11-23-Data-Types-in-R.Rmd
+++ b/_Rmd/2018-11-23-Data-Types-in-R.Rmd
@@ -131,7 +131,7 @@ v <- c(list1,list2)
 
 [[]]를 이용하여 리스트의 특정 요소를 반환할 수 있습니다.
 
-```
+```{r, eval=FALSE}
 mylist[[2]] # 2nd component of the list
 mylist[["mynumbers"]] # component named mynumbers in list
 ```
@@ -140,11 +140,12 @@ mylist[["mynumbers"]] # component named mynumbers in list
 
 명목 변수(nominal variable)는 factor 로 지정하여 분석할 수 있습니다. factor 는 명목 변수를 정수 벡터 [1, ..., k] (where k is the number of unique values in the nominal variable) 로 저장합니다.
 
-```
+```{r, eval=FALSE}
 # variable gender with 20 "male" entries and
 # 30 "female" entries
 gender <- c(rep("male",20), rep("female", 30))
 gender <- factor(gender)
+
 # stores gender as 20 1s and 30 2s and associates
 # 1=female, 2=male internally (alphabetically)
 # R now treats gender as a nominal variable
@@ -153,9 +154,10 @@ summary(gender)
 
 ordinal variable 는 factor 에 `ordered( )`를 사용하여 표현할 수 있습니다.
 
-```
+```{r, eval=FALSE}
 # variable rating coded as "large", "medium", "small'
 rating <- ordered(rating)
+
 # recodes rating to 1,2,3 and associates
 # 1=large, 2=medium, 3=small internally
 # R now treats rating as ordinal
@@ -166,7 +168,7 @@ rating <- ordered(rating)
 
 ## Useful Functions
 
-```
+```{r, eval=FALSE}
 length(object) # number of elements or components
 str(object)    # structure of an object
 class(object)  # class or type of an object
