--- a/_Rmd/2019-10-09-R-109-Missing-Data.Rmd
+++ b/_Rmd/2019-10-09-R-109-Missing-Data.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 109 결측치 처리 (Missing Data)  
 date: 2017-10-09  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
