--- a/_Rmd/2019-10-26-R-306-Multiple-Regression.Rmd
+++ b/_Rmd/2019-10-26-R-306-Multiple-Regression.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Multiple (Linear) Regression
 date: 2017-10-26  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R, regression]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
