--- a/_Rmd/2019-10-28-R-308-ANOVA-MANOVA.Rmd
+++ b/_Rmd/2019-10-28-R-308-ANOVA-MANOVA.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: ANOVA
 date: 2017-10-28  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
