--- a/_Rmd/2019-11-24-R-604-Lattice-Graphs.Rmd
+++ b/_Rmd/2019-11-24-R-604-Lattice-Graphs.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Lattice Graphs
 date: 2017-11-24  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
