--- a/_Rmd/2019-10-02-R-102-Importing-Data.Rmd
+++ b/_Rmd/2019-10-02-R-102-Importing-Data.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 102 데이터 불러오기 (Importing Data)  
 date: 2017-10-02  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
