--- a/_Rmd/2019-10-03-R-103-Keyboard-Input.Rmd
+++ b/_Rmd/2019-10-03-R-103-Keyboard-Input.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 103 직접 데이터 입력하기 (Keyboard Input)  
 date: 2017-10-03  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
