--- a/_Rmd/2019-10-04-R-104-Database-Input.Rmd
+++ b/_Rmd/2019-10-04-R-104-Database-Input.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 104 DB에서 데이터 불러오기 (Database Input)  
 date: 2017-10-04  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
