--- a/_Rmd/2019-10-05-R-105-Exporting-Data.Rmd
+++ b/_Rmd/2019-10-05-R-105-Exporting-Data.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 데이터를 엑셀(xlsx), 텍스트(txt), CSV 등으로 출력하는 방법  
 date: 2017-10-05  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
