--- a/_Rmd/2019-10-06-R-106-Viewing-Data.Rmd
+++ b/_Rmd/2019-10-06-R-106-Viewing-Data.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 106 데이터 살펴보기 (Viewing Data)  
 date: 2017-10-06  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
