--- a/_Rmd/2019-10-08-R-108-Value-Labels.Rmd
+++ b/_Rmd/2019-10-08-R-108-Value-Labels.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 108 값 레이블 (Value Labels)  
 date: 2017-10-08  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
