--- a/_Rmd/2019-10-13-R-203-Built-in-Functions.Rmd
+++ b/_Rmd/2019-10-13-R-203-Built-in-Functions.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 203 내장 함수들 (Built-in Functions)  
 date: 2017-10-13  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
