--- a/_Rmd/2019-10-14-R-204-Control-Structures.Rmd
+++ b/_Rmd/2019-10-14-R-204-Control-Structures.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 204 제어문 (Control Structures)  
 date: 2017-10-14  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
