--- a/_Rmd/2019-10-15-R-205-User-defined-Functions.Rmd
+++ b/_Rmd/2019-10-15-R-205-User-defined-Functions.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 205 사용자 정의 함수 (User-written Functions)  
 date: 2017-10-15  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
