--- a/_Rmd/2019-10-18-R-208-Aggregating.Rmd
+++ b/_Rmd/2019-10-18-R-208-Aggregating.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 208 데이터 합치기 (Aggregating Data)  
 date: 2017-10-18  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
