--- a/_Rmd/2019-10-19-R-209-Reshape.Rmd
+++ b/_Rmd/2019-10-19-R-209-Reshape.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 209 데이터 재구성하기 (Reshaping Data)  
 date: 2017-10-19  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
