--- a/_Rmd/2019-10-20-R-210-Subsetting.Rmd
+++ b/_Rmd/2019-10-20-R-210-Subsetting.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 210 데이터 추출하기 (Subsetting Data)  
 date: 2017-10-20  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
