--- a/_Rmd/2019-10-20-R-211-Data-Type-Conversion.Rmd
+++ b/_Rmd/2019-10-20-R-211-Data-Type-Conversion.Rmd
@@ -3,7 +3,7 @@ layout: post
 comments: false  
 title: R 기초 211 데이터 형식 변환하기 (Data Type Conversion)  
 date: 2017-10-20  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png
