--- a/_Rmd/2019-10-25-R-305-Nonparametric-Statistics.Rmd
+++ b/_Rmd/2019-10-25-R-305-Nonparametric-Statistics.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Nonparametric Tests of Group Differences
 date: 2017-10-25  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
