--- a/_Rmd/2019-10-27-R-307-Regression-Diagnostics.Rmd
+++ b/_Rmd/2019-10-27-R-307-Regression-Diagnostics.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Regression Diagnostics
 date: 2017-10-27  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
