--- a/_Rmd/2019-10-29-R-309-MANOVA-Assumptions.Rmd
+++ b/_Rmd/2019-10-29-R-309-MANOVA-Assumptions.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Assessing Classical Test Assumptions
 date: 2017-10-29  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
