--- a/_Rmd/2019-10-30-R-310-Resampling-Stats.Rmd
+++ b/_Rmd/2019-10-30-R-310-Resampling-Stats.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Resampling Statistics  
 date: 2017-10-30  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
