--- a/_Rmd/2019-11-01-R-401-Generalized-Linear-Models.Rmd
+++ b/_Rmd/2019-11-01-R-401-Generalized-Linear-Models.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Generalized Linear Models
 date: 2017-11-01  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
