--- a/_Rmd/2019-11-02-R-402-Discriminant-Function.Rmd
+++ b/_Rmd/2019-11-02-R-402-Discriminant-Function.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: 판별 분석 (Discriminant Function Analysis)  
 date: 2017-11-02  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
