--- a/_Rmd/2019-11-03-R-403-Time-Series.Rmd
+++ b/_Rmd/2019-11-03-R-403-Time-Series.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: 시계열 분석과 예측 (Time Series and Forecasting)
 date: 2017-11-03  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
