--- a/_Rmd/2019-11-05-R-405-Correspondence-Analysis.Rmd
+++ b/_Rmd/2019-11-05-R-405-Correspondence-Analysis.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Correspondence Analysis
 date: 2017-11-05  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
