--- a/_Rmd/2019-11-06-R-406-Multidimensional-Scaling.Rmd
+++ b/_Rmd/2019-11-06-R-406-Multidimensional-Scaling.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Multidimensional Scaling
 date: 2017-11-06  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
