--- a/_Rmd/2019-11-07-R-407-Cluster-Analysis.Rmd
+++ b/_Rmd/2019-11-07-R-407-Cluster-Analysis.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Cluster Analysis
 date: 2017-11-07  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
