--- a/_Rmd/2019-11-10-R-410-Matrix-Algebra.Rmd
+++ b/_Rmd/2019-11-10-R-410-Matrix-Algebra.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 410 행렬 연산 (Matrix Algebra)
 date: 2017-11-10  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
