--- a/_Rmd/2019-11-11-R-501-Creating-a-Graph.Rmd
+++ b/_Rmd/2019-11-11-R-501-Creating-a-Graph.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Creating a Graph
 date: 2017-11-11  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
