--- a/_Rmd/2019-11-13-R-503-Dot-Plots.Rmd
+++ b/_Rmd/2019-11-13-R-503-Dot-Plots.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Dot Plots
 date: 2017-11-13  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
