--- a/_Rmd/2019-11-14-R-504-Bar-Plots.Rmd
+++ b/_Rmd/2019-11-14-R-504-Bar-Plots.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Bar Plots
 date: 2017-11-14  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
