--- a/_Rmd/2019-11-15-R-505-Line-Charts.Rmd
+++ b/_Rmd/2019-11-15-R-505-Line-Charts.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Line Charts
 date: 2017-11-15  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
