--- a/_Rmd/2019-11-16-R-506-Pie-Charts.Rmd
+++ b/_Rmd/2019-11-16-R-506-Pie-Charts.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Pie Charts
 date: 2017-11-16  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
