--- a/_Rmd/2019-11-17-R-507-Boxplots.Rmd
+++ b/_Rmd/2019-11-17-R-507-Boxplots.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Boxplots
 date: 2017-11-17  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
