--- a/_Rmd/2019-11-22-R-602-Axes-and-Text.Rmd
+++ b/_Rmd/2019-11-22-R-602-Axes-and-Text.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Axes and Text
 date: 2017-11-22  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
