--- a/_Rmd/2019-11-23-R-603-Combining-Plots.Rmd
+++ b/_Rmd/2019-11-23-R-603-Combining-Plots.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Combining Plots
 date: 2017-11-23  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
