--- a/_Rmd/2019-11-25-R-605-Graphics-with-ggplot2.Rmd
+++ b/_Rmd/2019-11-25-R-605-Graphics-with-ggplot2.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Graphics with ggplot2
 date: 2017-11-25  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
