--- a/_Rmd/2019-11-26-R-606-Probability-Plots.Rmd
+++ b/_Rmd/2019-11-26-R-606-Probability-Plots.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Probability Plots
 date: 2017-11-26  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
