--- a/_Rmd/2019-11-29-R-609-Interactive-Graphics.Rmd
+++ b/_Rmd/2019-11-29-R-609-Interactive-Graphics.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: Interactive Graphics
 date: 2017-11-29  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
