--- a/_Rmd/2019-12-15-R-304-t-tests.Rmd
+++ b/_Rmd/2019-12-15-R-304-t-tests.Rmd
@@ -2,7 +2,7 @@
 layout: post  
 title: R 기초 t-tests
 date: 2017-12-15  
-category: [R for Beginners]  
+category: [Getting Started with R]  
 tag: [R]  
 author: hkim  
 hidden: true # don't count this post in blog pagination  
