--- a/_Rmd/2019-12-21-Logit.Rmd
+++ b/_Rmd/2019-12-21-Logit.Rmd
@@ -50,7 +50,12 @@ X \beta &=& \log \left( \frac{F\left(X\right)}{1-F\left(X\right)} \right) \\
         &=& \text{logit} \left( \pi \right)
 \end{eqnarray*}$$
 
-
+$$
+\begin{aligned}
+ AR(p): Y_i &= c + \epsilon_i + \phi_i Y_{i-1} \dots \\
+ Y_{i} &= c + \phi_i Y_{i-1} \dots
+\end{aligned}
+$$
 
 $\text{odds}$ : the probability of the event divided by the probability of the event not occurring.
 
