--- a/_posts/2017-12-21-Logit.md
+++ b/_posts/2017-12-21-Logit.md
@@ -39,22 +39,27 @@ $$
 .  
 $\pi = F\left(X\right) = P \left( Y_i = 1 | X \right)$ : the probability of the event given $X$  
 
-$$\begin{eqnarray*}
-F\left(X\right) &=& \text{logistic} \left( X \beta \right) \\
-                &=& \frac{1}{1+e^{- X \beta }} \\
-F\left(X\right) \left( 1+e^{- X \beta } \right)& = & 1\\
-F\left(X\right)  + F\left(X\right) e^{- X \beta } &=& 1 \\
-e^{- X \beta } &=& \frac{1-F\left(X\right)}{F\left(X\right)}\\
-e^{ X \beta } &=& \frac{F\left(X\right)}{1-F\left(X\right)}\\
-X \beta &=& \log \left( \frac{F\left(X\right)}{1-F\left(X\right)} \right) \\
-        &=& \text{logit} \left( \pi \right)
-\end{eqnarray*}$$
+$$\begin{aligned}
+F \left( X \right) &= \text{logistic} \left( X \beta \right) \\
+                &= \frac{1}{1+e^{- X \beta }} \\
+F\left(X\right) \left( 1+e^{- X \beta } \right) &= 1\\
+F\left(X\right)  + F\left(X\right) e^{- X \beta } &= 1 \\
+e^{- X \beta } &= \frac{1-F\left(X\right)}{F\left(X\right)}\\
+e^{ X \beta } &= \frac{F\left(X\right)}{1-F\left(X\right)}\\
+X \beta &= \log \left( \frac{F\left(X\right)}{1-F\left(X\right)} \right) \\
+        &= \text{logit} \left( \pi \right)
+\end{aligned}$$
 
 $$ F \left( X \right) = \text{logistic} \left( X \beta \right) $$
 $$  \phantom{00}     = \frac{1}{1+e^{- X \beta }} $$
 
 
-
+$$
+\begin{aligned}
+ AR(p): Y_i &= c + \epsilon_i + \phi_i Y_{i-1} \dots \\
+ Y_{i} &= c + \phi_i Y_{i-1} \dots
+\end{aligned}
+$$
 
 
 
