--- a/_posts/2017-12-21-Logit.md
+++ b/_posts/2017-12-21-Logit.md
@@ -50,7 +50,7 @@ X \beta &=& \log \left( \frac{F\left(X\right)}{1-F\left(X\right)} \right) \\
         &=& \text{logit} \left( \pi \right)
 \end{eqnarray*}$$
 
-$$ F \left( X \right) = \text{logistic} \left( X \beta \right) $$
+$$ F \left( X \right) = \text{logistic} \left( X \beta \right) $$  
 $$  \phantom{00}     = \frac{1}{1+e^{- X \beta }} $$
 
 
@@ -83,10 +83,13 @@ $$\begin{eqnarray*}
 
 ## Model Fitting
 
+$$\begin{align}
+\text{Pr} \left( Y_i = y_i | X_i \right) &=& p_i^{y_i} \left( 1-p_i \right)^{1-y_i} \\
+&=& \left( \frac{1}{1+e^{-X\beta}} \right)^{y_i} \left( 1- \frac{1}{1+e^{-X\beta}} \right)^{1-y_i}
+\end{align}$$
 
 $$\begin{eqnarray*}
-\text{Pr} \left( Y_i = y_i | X_i \right)
-&=& p_i^{y_i} \left( 1-p_i \right)^{1-y_i} \\
+\text{Pr} \left( Y_i = y_i | X_i \right) &=& p_i^{y_i} \left( 1-p_i \right)^{1-y_i} \\
 &=& \left( \frac{1}{1+e^{-X\beta}} \right)^{y_i} \left( 1- \frac{1}{1+e^{-X\beta}} \right)^{1-y_i}
 \end{eqnarray*}$$
 
