--- a/_posts/2017-12-21-Logit.md
+++ b/_posts/2017-12-21-Logit.md
@@ -28,8 +28,10 @@ $$
 \text{logit} \left( x \right) = \log \left( \frac{x}{1-x} \right)
 $$
 
-![logit function](http://mathworld.wolfram.com/images/eps-gif/LogitTransformation_1000.gif)
+![logit function](http://mathworld.wolfram.com/images/eps-gif/LogitTransformation_1000.gif)  
+
 .  
+
 $\text{logistic function}$ :  
 .  
 $$
@@ -109,12 +111,9 @@ L \left( \beta | x \right)
 Log Likelihood
 
 $$\begin{eqnarray*}
-\frac{1}{N} \text{log} \left( L \left( \beta | x \right) \right)
-&=& \frac{1}{N} \text{log} \left( \prod_i Pr \left( y_i | x_i ; \beta \right) \right) \\
+\frac{1}{N} \text{log} \left( L \left( \beta | x \right) \right) &=& \frac{1}{N} \text{log} \left( \prod_i Pr \left( y_i | x_i ; \beta \right) \right) \\
 &=& \frac{1}{N} \sum_i \text{log} \left( Pr \left( y_i | x_i ; \beta \right) \right) \\
-
 &=& \frac{1}{N} \sum_i \text{log} \left( \left( \frac{1}{1+e^{-X\beta}} \right)^{y_i} \left( 1- \frac{1}{1+e^{-X\beta}} \right)^{1-y_i} \right) \\
-
 &=& \frac{1}{N} \sum_i \left(
   y_i \text{log} \left( \frac{1}{1+e^{-X\beta}} \right) +
   \left( 1-y_i \right) \text{log} \left( 1- \frac{1}{1+e^{-X\beta}} \right)
