--- a/_Rmd/2018-11-24-Naver-News-Web-Scraping-in-R.Rmd
+++ b/_Rmd/2018-11-24-Naver-News-Web-Scraping-in-R.Rmd
@@ -138,6 +138,7 @@ head(naver_url_list,5)
 우리가 웹크롤링하고자 하는 주소 리스트가 생성되었습니다. 
 
 
+
 ## 검색결과에 포함된 링크 목록 만들기
 
 이제 본격적으로 웹 크롤링을 실시하겠습니다. 우선 위에서 만든 주소 리스트 가운데 하나를 가져와 분석합시다.
@@ -154,7 +155,7 @@ https://search.naver.com/search.naver?&where=news&query=미국+기준금리&pd=3
 
 우리가 원하는 네이버 뉴스 링크들은 `id="main_pack"` , `class="news ..."` , `class="type01"` 아래에 있으며 `href=` 라는 attribute 에 있는 것을 확인할 수 있습니다. html 소스를 분석하여 이러한 조건을 만족하는 값들만 추려내면 아래와 같습니다.
 
-```{r}
+```{r, eval=FALSE}
 naver_url <- "https://search.naver.com/search.naver?&where=news&query=미국+기준금리&pd=3&ds=2018.11.19&de=2018.11.19&start=1"
 html <- read_html(naver_url)
 temp <- unique(html_nodes(html,'#main_pack')%>% # id= 는 # 을 붙인다
@@ -162,12 +163,20 @@ temp <- unique(html_nodes(html,'#main_pack')%>% # id= 는 # 을 붙인다
                  html_nodes(css='.type01')%>%
                  html_nodes('a')%>%
                  html_attr('href'))
-head(temp,5)
 ```
+
+```
+## [1] "http://news.einfomax.co.kr/news/articleView.html?idxno=4003244"                       
+## [2] "#"                                                                                    
+## [3] "http://www.seoulwire.com/news/articleView.html?idxno=35031"                           
+## [4] "http://news.mt.co.kr/mtview.php?no=2018111911542399654"                               
+## [5] "https://news.naver.com/main/read.nhn?mode=LSD&mid=sec&sid1=004&oid=008&aid=0004134391"
+```
+
 
 `news.naver.com` 으로 시작하는 웹사이트 외에도 많은 사이트들이 들어가있는 것을 확인할 수 있습니다. 이것들을 지우는 것은 나중에 한꺼번에 처리하겠습니다.
 
-```{r}
+```{r, eval=FALSE}
 ## 네이버 검색결과 url 리스트에서 관련기사 url 리스트 만들기
 news_url <- c()
 news_date <-c() 
@@ -192,8 +201,6 @@ NEWS0 <- as.data.frame(cbind(date=news_date, url=news_url, query=QUERY))
 NEWS1 <- NEWS0[which(grepl("news.naver.com",NEWS0$url)),]         # 네이버뉴스(news.naver.com)만 대상으로 한다   
 NEWS1 <- NEWS1[which(!grepl("sports.news.naver.com",NEWS1$url)),] # 스포츠뉴스(sports.news.naver.com)는 제외한다  
 NEWS2 <- NEWS1[!duplicated(NEWS1), ] # 중복된 링크 제거 
-
-head(NEWS2,5)
 ```
 
 첫번째 url [https://news.naver.com/main/read.nhn?mode=LSD&mid=sec&sid1=004&oid=008&aid=0004134391](https://news.naver.com/main/read.nhn?mode=LSD&mid=sec&sid1=004&oid=008&aid=0004134391) 을 웹브라우저 주소창에 입력해봅시다. 원하는 뉴스가 정상적으로 출력되는 것을 확인할 수 있습니다.
