--- a/_Rmd/2018-11-18-Blog-with-R-Markdown.Rmd
+++ b/_Rmd/2018-11-18-Blog-with-R-Markdown.Rmd
@@ -7,7 +7,7 @@ tag: [R, jekyll]
 author: hkim   
 image: /assets/images/icon/iconmonstr-monitoring-6-240.png  
 headerImage: true
-comments: false
+comments: true
 
 ---
 
