--- a/_Rmd/2018-11-24-Naver-News-Web-Scraping-using-Keywords-in-R.Rmd
+++ b/_Rmd/2018-11-24-Naver-News-Web-Scraping-using-Keywords-in-R.Rmd
@@ -18,6 +18,7 @@ comments: true
 
 다음 자료를 참고하였습니다:  
 - [https://blog.naver.com/knowch/221060289410](https://blog.naver.com/knowch/221060289410)
+- [Beginner’s Guide on Web Scraping in R (using rvest) with hands-on example](https://www.analyticsvidhya.com/blog/2017/03/beginners-guide-on-web-scraping-in-r-using-rvest-with-hands-on-knowledge/)
 
 먼저 필요한 패키지를 설치합니다. 이번 가이드에서 사용하는 패키지는 `rvest` 와 `dplyr` 입니다.
 
@@ -176,8 +177,9 @@ head(temp,5)
 ## [5] "https://news.naver.com/main/read.nhn?mode=LSD&mid=sec&sid1=004&oid=008&aid=0004134391"
 ```
 
-
 `news.naver.com` 으로 시작하는 웹사이트 외에도 많은 사이트들이 들어가있는 것을 확인할 수 있습니다. 이것들을 지우는 것은 나중에 한꺼번에 처리하겠습니다.
+
+그럼 지금까지 작성한 코드들을 토대로, 1) 원하는 키워드를 포함한 네이버 뉴스 기사를, 2) 원하는 날짜 범위 안에서, 3) 원하는 페이지 수 만큼 찾아서 여기에 포함된 네이버 뉴스 기사 링크 목록을 만들어 보겠습니다.
 
 ```{r, eval=FALSE}
 ## 네이버 검색결과 url 리스트에서 관련기사 url 리스트 만들기
@@ -243,6 +245,9 @@ save(NEWS, file="./DATA0/NEWS.RData") # working directory 아래 subfolder "DATA
 이번 포스트에서 다룬 R을 이용하여 네이버 뉴스에서 원하는 키워드의 검색 결과를 웹크롤링(스크래핑) 하기 위한 전체 코드는 아래와 같습니다. 
 
 ```{r, eval=FALSE}
+## 네이버 뉴스에서 원하는 키워드의 검색 결과를 웹크롤링(스크래핑)하는 코드
+## 제작: hkim (dr-hkim.github.io)
+
 ## 패키지 불러오기
 library(rvest)
 library(dplyr)
