--- a/_Rmd/2018-11-24-Naver-News-Web-Scraping-using-Keywords-in-R.Rmd
+++ b/_Rmd/2018-11-24-Naver-News-Web-Scraping-using-Keywords-in-R.Rmd
@@ -12,7 +12,7 @@ comments: true
 
 ---
 
-***preface*** (last update: 2018.11.24) 이번 포스트에서는 R을 이용하여 네이버 뉴스에서 원하는 키워드의 검색 결과를 웹크롤링(스크래핑) 하는 방법에 대하여 설명합니다.
+***preface*** (last update: 2018.11.26) 이번 포스트에서는 R을 이용하여 네이버 뉴스에서 원하는 키워드의 검색 결과를 웹크롤링(스크래핑) 하는 방법에 대하여 설명합니다.
 
 # Naver News Web Scraping using Keywords in R
 
@@ -236,6 +236,16 @@ for (i in 1:dim(NEWS2)[1]){
 
 NEWS2$news_content <- gsub("// flash 오류를 우회하기 위한 함수 추가\nfunction _flash_removeCallback()", "", NEWS2$news_content) # 중복된 문자열 제거
 NEWS <- NEWS2 # 최종 결과 저장
+```
+
+지금까지 원하는 기간 동안의 원하는 키워드를 네이버 뉴스에서 검색한 결과를 기사 제목과 기사 내용으로 구분하여 저장하였습니다. 이렇게 수집한 기사를 분석하기 위해서는 비정형 데이터 분석 방법 가운데 하나인 **자연어 처리 기법**이 필요합니다. 여기에 대해서든 다음 포스트에서 다루도록 하겠습니다.
+
+이번 포스트에서 수집한 데이터를 다음 포스트에서 활용할 수 있도록, 데이터 파일을 하드드라이브에 따로 저장하도록 하겠습니다. 작업을 수행하는 working directory 아래에 `DATA0` 이라는 subfolder 를 만들고 여기에 저장하는 경우를 가정하겠습니다. 폴더를 만들 때에는 탐색기에서 작업하시거나, 우측 하단 Files 탭에서 New Folder 항목을 클릭하면 새 폴더를 만들 수 있습니다.
+
+파일 위치를 working directory 에 대한 상대경로로 설정하여 저장하는 방법은 다음과 같습니다.
+
+
+```{r, eval=FALSE}
 save(NEWS, file="./DATA0/NEWS.RData") # working directory 아래 subfolder "DATA0" 에 저장
 ```
 
@@ -315,6 +325,7 @@ for (i in 1:dim(NEWS2)[1]){
 
 NEWS2$news_content <- gsub("// flash 오류를 우회하기 위한 함수 추가\nfunction _flash_removeCallback()", "", NEWS2$news_content)
 NEWS <- NEWS2 # 최종 결과 저장
+
 save(NEWS, file="./DATA0/NEWS.RData") # working directory 아래 subfolder "DATA0" 에 저장
 ```
 
