--- a/_Rmd/2018-11-26-Naver-News-Word-Cloud-in-R.Rmd
+++ b/_Rmd/2018-11-26-Naver-News-Word-Cloud-in-R.Rmd
@@ -22,7 +22,10 @@ comments: true
 
 [지난번 포스트](https://dr-hkim.github.io/Naver-News-Web-Scraping-using-Keywords-in-R/)에서는 R을 이용하여 네이버 뉴스에서 원하는 키워드의 검색 결과를 웹크롤링(스크래핑) 하는 방법에 대하여 알아보았습니다. 이번 포스트에서는 지난번에 수집한 텍스트 자료를 분석하는 방법에 대하여 살펴보겠습니다.
 
-뉴스 기사를 분석하기 위해서는 자연어 처리라는 비정형 데이터 분석 방법을 사용해야 합니다. 우리말을 단어 단위로 나누기 위해서는 형태소 분석을 해야 합니다. 복잡한 부분은 우선 넘어가고, 이것을 실행하기 위해서는 패키지 설치와 사전 준비단계가 필요합니다.
+
+## 패키지 설치
+
+뉴스 기사를 분석하기 위해서는 자연어 처리라는 비정형 데이터 분석 방법을 사용해야 합니다. 우리말을 단어 단위로 나누기 위해서는 형태소 분석을 해야 합니다. 복잡한 부분은 우선 넘어가고, 이것을 실행하기 위해서는 다양한 패키지 설치와 사전 준비단계가 필요합니다.
 
 먼저 [https://www.java.com/en/download/manual.jsp](https://www.java.com/en/download/manual.jsp) 에 접속하여 자신의 운영체제에 맞는 오프라인 버전을 설치합니다. 이번 포스트에서는 한국어의 형태소 분석을 위해 `KoNLP` 라는 패키지를 사용할 것입니다. 이 패키지를 사용하기 위해서는 `rJava` 패키지가 필요하며, `rJava` 패키지 사용을 위해서는 Java 를 깔 필요가 있습니다.
 
@@ -44,6 +47,8 @@ library('KoNLP')
 
 useNIADic() # KoNLP 패키지에 있는 형태소사전(NIADic) 사용 선언
 ```
+
+## 단어 분석하기
 
 본격적인 분석을 하기 위하여 지난번에 저장한 Rdata 파일을 불러옵니다.
 
@@ -114,6 +119,8 @@ tbl_TEXTFILECOUNT1 <- tbl_TEXTFILECOUNT0 %>% filter(n>=5) %>% filter(!noun %in% 
   "기자","억원","이날"
 ))
 ```
+
+## 워드 클라우드 만들기
 
 이제 상위 200개 단어를 이용하여 워드클라우드를 만들어 보겠습니다. 기본적으로 나오는 폰트는 마음에 들지 않으니 맑은 고딕으로 변경하였습니다. size 설정에 따라 단어가 나타나지 않는 경우가 있습니다. 이 때에는 size 설정을 조금 줄여주면 모든 단어가 표시됩니다. 저는 워드 클라우드 안에서 단어가 회전되어 있는 것을 선호하지 않으므로 `minRotation=0, maxRotation=0` 옵션을 추가하였습니다.
 
