--- a/_Rmd/2018-11-27-Install-Packages-without-Internet-Connection.Rmd
+++ b/_Rmd/2018-11-27-Install-Packages-without-Internet-Connection.Rmd
@@ -37,7 +37,8 @@ getDependencies <- function(packs){
 }
 
 ## 설치하고 싶은 패키지를 입력하면 관련 패키지를 모두 저장
-packages <- getDependencies(c("ggplot2","dplyr"))
+## 아래 패키지 예시는 업무용PC에서 많이 사용하는 패키지들 (지속 업데이트 예정)
+packages <- getDependencies(c("ggplot2", "reshape2", "readr", "R6","dplyr"))
 ```
 
 관련 패키지를 모두 다운받고 리스트를 `.csv` 파일로 저장합니다.
